# uniutils

./: CREDITS  ChangeLog  ExplicateBadUTF8.c  ExplicateUTF8.1  ExplicateUTF8.c  Get_UTF32_From_UTF8i.c  Get_UTF32i.c  Makefile.am  Makefile.in  NEWS  NelsonTbl.c  README  Read_UMagic_Number.c  TODO  binfmt.c  config.h.in  configure  configure.ac  genunames.awk  genuranges.sh  nelson.h  offsettbl.c  offsettbl.h  putu8.c  unames.c  unicode.h  unidesc.1  unidesc.c  uniftypes.h  unifuzz.1  unifuzz.c  unihist.1  unihist.c  uniname.1  uniname.c  unirange.c  unirange.h  unireverse.1  unireverse.c  uranges.c  (+2 more)
TestData/: Test1.ann  Test1.u  Test2.ann  Test2.u  Test3.ann  Test4.ann  Test5.ann  Test5.u
